linked the logo

--- a/aboutUS.html
+++ b/aboutUS.html
@@ -24,7 +24,7 @@
   
   <!-- Title and Logo -->
   <a class="navbar-brand " href="#">
-    <img src="/navbarimages/atom.svg" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
+    <img src="/img/atom.svg" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
     
   </a>
 
