--- a/aboutUS.html
+++ b/aboutUS.html
@@ -24,7 +24,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark navcolor fixed-top py-0 py-md-1 py-lg-2">
   
   <!-- Title and Logo -->
-  <a class="navbar-brand" href="#">
+  <a class="navbar-brand" href="categories.php">
     <img src="img/atom.svg" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
     <span id="brand">Quizzer</span>   
   </a>
