--- a/rules.html
+++ b/rules.html
@@ -12,14 +12,14 @@
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
         <link href="hamburgers.css" rel="stylesheet">
         <link rel="stylesheet" href="hamburgers.css">
-    <link rel="stylesheet" href="aboutUS.css">
+    <link rel="stylesheet" href="rules.css">
 
-    <title>About Us</title>
+    <title>Rules</title>
 </head>
 
 
 <body id="my-scrollbar">
-<div id="particles-js">
+
   <!-- Navbar Start -->
 <nav class="navbar navbar-expand-lg navbar-dark navcolor fixed-top py-0 py-md-1 py-lg-2">
   
@@ -30,7 +30,7 @@
   </a>
 
 <a class="navbar-brand d-block d-sm-block d-md-block d-lg-none fixed-top mx-auto py-3 w-50" href="#">
-    About Us
+    Rules
   </a>
 
 <button class="hamburger hamburger--emphatic is-valid navbar-toggler " type="button" data-toggle="collapse" data-target="#expandme">
@@ -44,8 +44,8 @@
   <div class="navbar-nav">
     <a class="nav-item nav-link" href="categories.php">Home</a>
     <a class="nav-item nav-link" href="#">Leaderboard</a>
-    <a class="nav-item nav-link" href="#">Rules</a>
-    <a class="nav-item nav-link active" href="#">About Us</a>
+    <a class="nav-item nav-link active" href="#">Rules</a>
+    <a class="nav-item nav-link" href="#">About Us</a>
   </div>
   <div class="navbar-nav ml-auto">
     <a class="nav-item nav-link active "href="logout.php"><i class="fa fa-sign-out" aria-hidden="true"></i> Logout</a>
@@ -62,19 +62,34 @@
 
 
 <!-- Categories Tile -->
-<div class="title">
-  <p>About Us</p>
+<div id="particles-js">
+
+<div  class="container row mx-auto justify-content-center text-center parent-2">
+  <div class="heading">
+  <div class="title">
+  <p>Rules</p>
 </div>
-<div class="container row mx-auto justify-content-center text-center ">
-<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti aliquam necessitatibus sint repellat, ipsa aspernatur quasi molestias labore! Doloribus fugit quaerat soluta molestias quae minima temporibus molestiae quas, ea quidem.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti aliquam necessitatibus sint repellat, ipsa aspernatur quasi molestias labore! Doloribus fugit quaerat soluta molestias quae minima temporibus molestiae quas, ea quidem.</p>
+<h3>Alright so here are some rules you gotta follow</h3>
+<div class="space"></div>
+<p>
+<ol>
+    <li>Only individual entries are eligible. No team participation.</li>
+    <li>The decision of the quiz-master will be final and will not be subjected to any change.</li>
+    <li>The questions shall be in the form of multiple choice.</li>
+    <li>Participant found to involve in any sort of malpractice shall be disqualified immediately and Score and Level will be reset to 0.</li>
+    <li>Participant can select one of many quiz categories on our site which will instantly begin the quiz.</li>
+    <li>A total of 5 questions will be asked per category after which the score will be calculated.</li>
+    <li>Each correct answer fetches 10 points.</li>
+    <li>No negative marking.</li>
+    <li>The leaderboard page will feature the top 10 participants who scored the highest in all the quizzes combined.</li>
+    <li>Participants can contact us incase they face any technical difficulties.</li>
+    <li>HAPPY QUIZZING!!</li>
 
+</ol></p>
 
-<div class="LI-profile-badge col-sm-6 col-lg-4 col-xl-3 parent2"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="navaneeth-suresh-a23a771a4"><a class="LI-simple-link" href='https://in.linkedin.com/in/navaneeth-suresh-a23a771a4?trk=profile-badge'>Navaneeth Suresh</a></div>
+</div>
 
-<div class="LI-profile-badge col-sm-6 col-lg-4 col-xl-3 parent2"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="rahul-anil-nayak-039436166"><a class="LI-simple-link" href='https://in.linkedin.com/in/rahul-anil-nayak-039436166?trk=profile-badge'>Rahul anil Nayak</a></div>
-
-<div class="LI-profile-badge col-sm-6 col-lg-4 col-xl-3 parent2"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="sughoshdurg"><a class="LI-simple-link" href='https://in.linkedin.com/in/sughoshdurg?trk=profile-badge'>Sughosh S Durg</a></div>
-<div id="particles-js"></div>
+</div>
 </div>
 
 
