--- a/rules.html
+++ b/rules.html
@@ -24,7 +24,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark navcolor fixed-top py-0 py-md-1 py-lg-2">
   
   <!-- Title and Logo -->
-  <a class="navbar-brand" href="categories.php">
+  <a class="navbar-brand" href="category.php">
     <img src="img/atom.svg" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
     <span id="brand">Quizzer</span>   
   </a>
@@ -42,7 +42,7 @@
 <div class="collapse navbar-collapse " id="expandme">
 
   <div class="navbar-nav">
-    <a class="nav-item nav-link" href="categories.php">Home</a>
+    <a class="nav-item nav-link" href="category.php">Home</a>
     <a class="nav-item nav-link" href="#">Leaderboard</a>
     <a class="nav-item nav-link active" href="#">Rules</a>
     <a class="nav-item nav-link" href="#">About Us</a>
