deleted + added leaderboard

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -56,15 +56,12 @@
     </nav>
     <!-- End of Nav Bar -->
 
-
     <!-- Categories Tile -->
     <div class="title">
         <p>Your Progress</p>
     </div>
 
     <!-- Cards -->
-    
-
     <div class="container-fluid row mx-auto justify-content-center text-center ">
         <div class="col-sm-6 col-md-3 parent2">
         <div class="cardn">
@@ -95,13 +92,13 @@
 
             <p><button>Contact</button></p>
         </div>
-        
+
     </div>
         <div class="col-sm-6 col-md-6 parent2">
             <div class="cardn lboard">
-                <div>
+                <nav>
                     <h2>Leaderboard</h2>
-                </div>
+                </nav>
                 <table>
                     <tr>
                         <th>Name</th>
