--- a/leaderboard.html
+++ b/leaderboard.html
@@ -94,16 +94,20 @@
         </div>
 
     </div>
-        <div class="col-sm-6 col-md-6 parent2">
+        <div class="col-sm-12 col-md-6 parent2">
             <div class="cardn lboard">
-                <nav>
-                    <h2>Leaderboard</h2>
+                <nav class='ladder-nav'>
+                    <div class="ladder-title">
+                        <h3>Leaderboard</h3>
+                    </div>
                 </nav>
-                <table>
-                    <tr>
-                        <th>Name</th>
-                        <th>Position</th>
-                    </tr>
+                <table id="rankings" class="leaderboard-results" width="100%">
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Position</th>
+                        </tr>
+                    </thead>
                     <tr>
                         <td>Username</td>
                         <td>1</td>
