--- a/rules.html
+++ b/rules.html
@@ -43,9 +43,9 @@
 
   <div class="navbar-nav">
     <a class="nav-item nav-link" href="category.php">Home</a>
-    <a class="nav-item nav-link" href="#">Leaderboard</a>
+    <a class="nav-item nav-link" href="leaderboard.php">Leaderboard</a>
     <a class="nav-item nav-link active" href="#">Rules</a>
-    <a class="nav-item nav-link" href="#">About Us</a>
+    <a class="nav-item nav-link" href="aboutUS.html">About Us</a>
   </div>
   <div class="navbar-nav ml-auto">
     <a class="nav-item nav-link active "href="logout.php"><i class="fa fa-sign-out" aria-hidden="true"></i> Logout</a>
