--- a/aboutUS.html
+++ b/aboutUS.html
@@ -43,7 +43,7 @@
 
   <div class="navbar-nav">
     <a class="nav-item nav-link" href="category.php">Home</a>
-    <a class="nav-item nav-link" href="#">Leaderboard</a>
+    <a class="nav-item nav-link" href="leaderboard.php">Leaderboard</a>
     <a class="nav-item nav-link" href="rules.html">Rules</a>
     <a class="nav-item nav-link active" href="#">About Us</a>
   </div>
@@ -66,7 +66,7 @@
   <p>About Us</p>
 </div>
 <div class="container row mx-auto justify-content-center text-center ">
- <p>We are 2nd year students of Information Science Department of BMS college of engineering. This respnsive website is made using HTML-5,CSS-3,Javascript,PHP and mySQL under the guidance of department professor Ms Nalina  </p>
+ <p>We are 2nd year students of Information Science Department of BMS college of engineering. This responsive website is made using HTML-5,CSS-3,Javascript,PHP and mySQL under the guidance of department professor Ms Nalina  </p>
 <div class="LI-profile-badge col-sm-6 col-lg-4 col-xl-3 parent2"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="navaneeth-suresh-a23a771a4"><a class="LI-simple-link" href='https://in.linkedin.com/in/navaneeth-suresh-a23a771a4?trk=profile-badge'>Navaneeth Suresh</a></div>
 
 <div class="LI-profile-badge col-sm-6 col-lg-4 col-xl-3 parent2"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="rahul-anil-nayak-039436166"><a class="LI-simple-link" href='https://in.linkedin.com/in/rahul-anil-nayak-039436166?trk=profile-badge'>Rahul anil Nayak</a></div>
